# HDCS

./: .gitignore  .gitmodules  CMakeLists.txt  Changelog  Makefile  README.md  build.sh  general.conf  install_deps.sh  librbd-hyperstash_10.2.2.patch  librbd-hyperstash_10.2.5.patch  librbd-hyperstash_11.0.2.patch  replica.conf
hdcs_manager/source/hsm/: .coveragerc  .testr.conf  hsm.spec  install-hsm.sh  requirements.txt  run_tests.sh  setup.cfg  setup.py  test-requirements.txt  tox.ini
hdcs_manager/source/hsm-dashboard/: hsm-dashboard.conf  hsm-dashboard.spec  install-hsm-dashboard.sh  manage.py  setup.cfg
hdcs_manager/source/hsm-dashboard/debian/: changelog  control  postinst  preinst  prerm  rules
hdcs_manager/source/hsm-dashboard/hsm_dashboard/: context_processors.py  exceptions.py  settings.py  urls.py  views.py
hdcs_manager/source/hsm-dashboard/hsm_dashboard/api/: __init__.py  base.py  hsm.py  keystone.py
hdcs_manager/source/hsm-dashboard/hsm_dashboard/dashboards/hsm/: dashboard.py
hdcs_manager/source/hsm-dashboard/hsm_dashboard/dashboards/hsm/hs_instance/: panel.py  tables.py  urls.py  views.py
hdcs_manager/source/hsm-dashboard/hsm_dashboard/dashboards/hsm/overview/: panel.py  urls.py  views.py
hdcs_manager/source/hsm-dashboard/hsm_dashboard/dashboards/hsm/rbd/: forms.py  panel.py  tables.py  urls.py  views.py
hdcs_manager/source/hsm-dashboard/hsm_dashboard/dashboards/hsm/server/: panel.py  tables.py  urls.py  views.py
hdcs_manager/source/hsm-dashboard/hsm_dashboard/dashboards/hsm/user/: forms.py  panel.py  tables.py  urls.py  views.py
hdcs_manager/source/hsm-dashboard/hsm_dashboard/local/: local_settings.py  local_settings.template
hdcs_manager/source/hsm-dashboard/hsm_dashboard/templates/: 403.html  404.html  500.html  _header.html
hdcs_manager/source/hsm-dashboard/hsm_dashboard/wsgi/: django.wsgi
hdcs_manager/source/hsm-dashboard/static/dashboard/css/: common.css  e7aedb582487.css  hs_instance.css  overview.css  rbd.css  rbd_cache_config.css  server.css
hdcs_manager/source/hsm-dashboard/static/dashboard/js/: hs_instance.js  hsm.js  hsm.tables.js  overview.js  rbd.js  rbd_cache_config.js  server.js  user.js
hdcs_manager/source/hsm/debian/: changelog  control  postinst  preinst  prerm  rules
hdcs_manager/source/hsm/etc/hsm/: api-paste.ini  hsm.conf.sample  logging_sample.conf  rootwrap.conf
hdcs_manager/source/hsm/etc/hsm/rootwrap.d/: hsm.filters
hdcs_manager/source/hsm/etc/init.d/centos7/: hsm-agent  hsm-api  hsm-conductor  hsm-scheduler
hdcs_manager/source/hsm/etc/init.d/ubuntu14/: hsm-agent  hsm-api  hsm-conductor  hsm-scheduler
hdcs_manager/source/hsm/etc/logrotate.d/: hsmrotate
hdcs_manager/source/hsm/etc/sudoers.d/: hsm
hdcs_manager/source/hsm/hsm/: __init__.py  context.py  exception.py  flags.py  manager.py  policy.py  service.py  test.py  utils.py  version.py  wsgi.py
hdcs_manager/source/hsm/hsm/agent/: __init__.py  api.py  driver.py  manager.py  rpcapi.py
hdcs_manager/source/hsm/hsm/api/: __init__.py  extensions.py  urlmap.py  validator.py  versions.py  xmlutil.py
hdcs_manager/source/hsm/hsm/api/contrib/: __init__.py  services.py
hdcs_manager/source/hsm/hsm/api/middleware/: auth.py  fault.py  sizelimit.py
hdcs_manager/source/hsm/hsm/api/openstack/: __init__.py  wsgi.py
hdcs_manager/source/hsm/hsm/api/v1/: hs_instances.py  performance_metrics.py  rbd_cache_configs.py  rbds.py  router.py  servers.py
hdcs_manager/source/hsm/hsm/api/views/: versions.py
hdcs_manager/source/hsm/hsm/common/: sqlalchemyutils.py
hdcs_manager/source/hsm/hsm/conductor/: __init__.py  api.py  manager.py  rpcapi.py
hdcs_manager/source/hsm/hsm/db/: __init__.py  api.py  base.py  migration.py
hdcs_manager/source/hsm/hsm/db/sqlalchemy/: api.py  migration.py  models.py  session.py  utils.py
hdcs_manager/source/hsm/hsm/db/sqlalchemy/migrate_repo/: manage.py  migrate.cfg
hdcs_manager/source/hsm/hsm/diamond/: diamond.conf
hdcs_manager/source/hsm/hsm/diamond/collectors/hyperstash/: hyperstash.py
hdcs_manager/source/hsm/hsm/diamond/handlers/: hsmmysql.py
hdcs_manager/source/hsm/hsm/locale/: hsm.pot
hdcs_manager/source/hsm/hsm/openstack/common/: exception.py  excutils.py  gettextutils.py  jsonutils.py  lockutils.py  log.py  periodic_task.py  policy.py  version.py
hdcs_manager/source/hsm/hsm/openstack/common/db/: exception.py
hdcs_manager/source/hsm/hsm/openstack/common/notifier/: api.py  log_notifier.py  (+3 more)
hdcs_manager/source/hsm/hsm/scheduler/: __init__.py  api.py  manager.py  rpcapi.py
hdcs_manager/source/hsm/hsm/tests/: __init__.py  conf_fixture.py
hdcs_manager/source/hsm/hsm/tests/api/: fakes.py
hdcs_manager/source/hsm/tools/: colorizer.py
hdcs_manager/source/python-hsmclient/: .coveragerc  .testr.conf  LICENSE  README.rst  install-python-hsmclient.sh  python-hsmclient.spec  requirements.txt  run_tests.sh  setup.cfg  setup.py  test-requirements.txt  tox.ini
hdcs_manager/source/python-hsmclient/debian/: changelog  control  rules
hdcs_manager/source/python-hsmclient/hsmclient/: __init__.py  base.py  client.py  exceptions.py  extension.py  service_catalog.py  shell.py  utils.py
hdcs_manager/source/python-hsmclient/hsmclient/openstack/common/: gettextutils.py  strutils.py
hdcs_manager/source/python-hsmclient/hsmclient/tests/: README.rst
hdcs_manager/source/python-hsmclient/hsmclient/tests/unit/: fakes.py  utils.py
hdcs_manager/source/python-hsmclient/hsmclient/v1/: __init__.py  client.py  hs_instances.py  performance_metrics.py  rbd_cache_configs.py  rbds.py  servers.py  shell.py
hdcs_manager/source/python-hsmclient/hsmclient/v1/contrib/: list_extensions.py
src/Network/rdma_common/rdma_messenger/: CMakeLists.txt
src/Network/rdma_common/rdma_messenger/include/rdma_messenger/: Acceptor.h  Buffer.h  Callback.h  Common.h  Connector.h  RDMAClient.h  RDMAConnection.h  RDMAServer.h  RDMAStack.h  ThreadWrapper.h
src/Network/rdma_common/rdma_messenger/src/core/: Acceptor.cc  Connector.cc  RDMAConnection.cc  RDMAStack.cc
src/Network/rdma_common/rdma_messenger/test/ping_pong/: client.cc  server.cc
(+301 files in other folders)
