[metadata]
name = hsm-dashboard
summary = Hyperstash Manager
description-file =
    README.rst
author = HSM Contributors
author-email =
home-page =
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    hsm_dashboard
    bin
    static

[entry_points]
console_scripts =

[nosetests]
verbosity = 2
detailed-errors = 1

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

