[metadata]
name = hsm
summary = Hyperstash Manager
description-file =
    README.rst
author = HSM Contributors
author-email = ml-node+s33411n1h81@n7.nabble.com
home-page = https://github.com/01org/virtual-storage-manager
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    hsm

[entry_points]
console_scripts =

[egg_info]
tag_build = 
tag_date = 0
tag_svn_revision = 0
